--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Alex Bowers</h1>
-    <p>Student</p>
-    <p>Beginning Coder</p>
-    <img src="http://placehold.it/200x200">
-    <img src="http://placehold.it/200x200">
+    <header>
+      <h1>Alex Bowers</h1>
+      <p>Student</p>
+      <p>Beginning Coder</p>
+    </header>
+    <main>
+      <img src="http://placehold.it/200x200">
+      <img src="http://placehold.it/200x200">
+    </main>
     <script src="app.js"></script>
 
   </body>
