--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <main>
       <img src="http://placehold.it/200x200">
       <img src="http://placehold.it/200x200">
+      <article>
+        <p>I am a 29yr old man that lives in Washington State.  I have three pets: two dogs and a cat.  Before starting coding I was working two jobs.  I relly like video games; my preffered medium is xbox one.</p>
+      </article>
     </main>
     <script src="app.js"></script>
 
